# scenegraph-demo

./: README.md  meson.build
resources/shaders/: basic_fragment.glsl  basic_vertex.glsl
src/: logging.cpp  logging.hpp  main.cpp
src/nodes/: node.cpp  node.hpp  perspective_camera.cpp  perspective_camera.hpp
src/resources/: image_resource.cpp  image_resource.hpp  raw_resource.cpp  raw_resource.hpp  resource.cpp  resource.hpp
src/shaders/: shader.cpp  shader.hpp
